AZUREUS CHANGELOG
-----------------

2007.xx.xx | Azureus 3.0.1.4

BUGFIX: Core  | Fixed bug which sometimes prevented corrupted torrents being removed properly [amc1]

2007.04.12 | Azureus 3.0.1.2

FEATURE: Core | Auto-speed: added control for forced-max network speed [Parg]

BUGFIX: Core  | 100% CPU problem in network code under some conditions [Parg]



2007.04.05 | Azureus 3.0.1.0

FEATURE: Core | Option to clear stored tracker list used for creating torrents [amc1]
FEATURE: UI   | Option to add full UPnP debug information to the log view [amc1]

BUGFIX:  UI   | Fixed issue where excessive file checks were being done when generating the torrent context menu [amc1]


2007.03.15 | Azureus 3.0.0.8

FEATURE: Core | Alerts can now be shown in individual message popup boxes [amc1]
FEATURE: Core | Alerts can now be suppressed and shown on demand [amc1]
FEATURE: Core | Per-peer upload/download speed limits [Parg]
FEATURE: Core | Per-category upload/download speed limits [Parg]
FEATURE: Core | Per-torrent super-seeding via MyTorrents context menu [Parg]
FEATURE: UI   | Option to auto-download and install updates [TuxPaper]
FEATURE: UI   | Overall piece map for Piece View [TuxPaper]
FEATURE: UI   | New "Peer ID" columns in the Peers View [amc1]
FEATURE: Plug | Plugins can now add their own status indicators on the status bar [amc1]
FEATURE: Plug | Plugins can now add menu items to the system tray, download bars, menu bar [amc1]
FEATURE: Plug | Plugins can now remove menu items that are created (allows for dynamic menus) [amc1]
FEATURE: Plug | Added extra methods on DownloadManager making it easier to listen to download events [amc1]

CHANGE: Core  | Include msvcr71.dll in Windows installation bundles, for compatibility with Java6 [Nolar]
CHANGE: Plug  | Added full set of config parameter methods for completeness [amc1]

BUGFIX: Plug  | UPnP plugin now correctly attempts to remove existing mappings if they are in the way of new mappings [amc1]